fixed overlaping of contents

--- a/src/Components/PinnedScroll/style.css
+++ b/src/Components/PinnedScroll/style.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     padding:10vh 0;
     width: 100%;
     gap: 2rem;
